# Alliansi-System

./: .gitignore  .replit  build.sh  design_guidelines.json  package-lock.json  package.json  pyproject.toml  replit.md
.emergent/: emergent.yml  summary.txt
attached_assets/: Logo-SMF-Alliansi_1782448048015  Pasted-Task-Implement-Inline-Manual-Ritase-Trip-Update-in-the-_1772507118756.txt
backend/: requirements.txt  server.py
backend/tests/: conftest.py  test_monthly_periods.py  test_raja_api.py
frontend/: .gitignore  craco.config.js  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css  setupProxy.js
frontend/src/components/: Layout.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AdminDashboard.jsx  AuditLog.jsx  Drivers.jsx  LaporanMingguan.jsx  Login.jsx  PoolDashboard.jsx  RevenueReport.jsx  RitaseList.jsx  SIJInput.jsx  SIJList.jsx  SuperAdminDashboard.jsx  UserManagement.jsx
memory/: PRD.md
scripts/: post-merge.sh
test_reports/: iteration_1.json  iteration_2.json  iteration_3.json
test_reports/pytest/: pytest_results.xml  pytest_results_v2.xml  pytest_results_v3.xml  pytest_results_v4.xml
