[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.133.0",
    "pydantic>=2.12.5",
    "pyjwt>=2.11.0",
    "pypdf>=6.10.2",
    "pytest>=9.0.3",
    "python-multipart>=0.0.22",
    "reportlab>=4.4.10",
    "requests>=2.33.1",
    "tzdata>=2025.3",
    "uvicorn>=0.41.0",
]
